# Airport_plain_support_app

./: README.md  README.md.autosave
Airport_supp/: AfterLandingPage.qml  AirportPage.qml  CMakeLists.txt  InTheAirPage.qml  Main.qml  afterlanding.cpp  afterlanding.h  inflightassistance.cpp  inflightassistance.h  main.cpp  preflightinfo.cpp  preflightinfo.h  resources.qrc  runwaymanager.cpp  runwaymanager.h  weatherconditiondisplay.cpp  weatherconditiondisplay.h
